--- a/package.json
+++ b/package.json
@@ -35,6 +35,35 @@
 		}
 	},
 	"contributes": {
+		"menus": {
+			"editor/title": [
+				{
+					"when": "resourceLangId == rust",
+					"command": "code-debug.removeDebugFile",
+					"group": "navigation"
+				},
+				{
+					"when": "resourceLangId == rust",
+					"command": "code-debug.setKernelInOutBreakpoints",
+					"group": "navigation"
+				},
+				{
+					"when": "resourceLangId == rust",
+					"command": "code-debug.removeAllCliBreakpoints",
+					"group": "navigation"
+				},
+				{
+					"when": "resourceLangId == rust",
+					"command": "code-debug.disableCurrentSpaceBreakpoints",
+					"group": "navigation"
+				},
+				{
+					"when": "resourceLangId == rust",
+					"command": "code-debug.updateAllSpacesBreakpointsInfo",
+					"group": "navigation"
+				}
+			]
+		},
 		"commands": [
 			{
 				"command": "code-debug.examineMemoryLocation",
@@ -49,6 +78,46 @@
 				"command": "core-debugger.updatePanel",
 				"title": "update core-debugger panel",
 				"category": "CoreDebugger"
+			},
+			{
+				"command": "code-debug.removeDebugFile",
+				"title": "Remove Debug File",
+				"icon": {
+					"dark": "images/remove-debug-file-dark.svg",
+					"light": "images/remove-debug-file-light.svg"
+				}
+			},
+			{
+				"command": "code-debug.setKernelInOutBreakpoints",
+				"title": "Set Kernel-In-Out Breakpoints",
+				"icon": {
+					"dark": "images/set-kernel-in-out-breakpoints-dark.svg",
+					"light": "images/set-kernel-in-out-breakpoints-light.svg"
+				}
+			},
+			{
+				"command": "code-debug.removeAllCliBreakpoints",
+				"title": "Remove All Cli Breakpoints",
+				"icon": {
+					"dark": "images/remove-all-cli-breakpoints-dark.svg",
+					"light": "images/remove-all-cli-breakpoints-light.svg"
+				}
+			},
+			{
+				"command": "code-debug.disableCurrentSpaceBreakpoints",
+				"title": "Disable Current Space Breakpoints",
+				"icon": {
+					"dark": "images/disable-current-space-breakpoints-dark.svg",
+					"light": "images/disable-current-space-breakpoints-light.svg"
+				}
+			},
+			{
+				"command": "code-debug.updateAllSpacesBreakpointsInfo",
+				"title": "Update All Spaces Breakpoints Info",
+				"icon": {
+					"dark": "images/update-all-spaces-breakpoints-info-dark.svg",
+					"light": "images/update-all-spaces-breakpoints-info-light.svg"
+				}
 			}
 		],
 		"breakpoints": [
@@ -169,18 +238,30 @@
 								"type": "array",
 								"description": "Cmdline args which will be passed to qemu",
 								"default": [
-									"-M", "128m",
-									"-machine", "virt",
-									"-bios", "${userHome}/rCore-Tutorial-v3/bootloader/rustsbi-qemu.bin",
-									"-display", "none",
-									"-device", "loader,file=${userHome}/rCore-Tutorial-v3/os/target/riscv64gc-unknown-none-elf/release/os.bin,addr=0x80200000",
-									"-drive", "file=${userHome}/rCore-Tutorial-v3/user/target/riscv64gc-unknown-none-elf/release/fs.img,if=none,format=raw,id=x0",
-									"-device", "virtio-blk-device,drive=x0",
-									"-device", "virtio-gpu-device",
-									"-device", "virtio-keyboard-device",
-									"-device", "virtio-mouse-device",
-									"-serial", "stdio",
-									"-s", "-S"
+									"-M",
+									"128m",
+									"-machine",
+									"virt",
+									"-bios",
+									"${userHome}/rCore-Tutorial-v3/bootloader/rustsbi-qemu.bin",
+									"-display",
+									"none",
+									"-device",
+									"loader,file=${userHome}/rCore-Tutorial-v3/os/target/riscv64gc-unknown-none-elf/release/os.bin,addr=0x80200000",
+									"-drive",
+									"file=${userHome}/rCore-Tutorial-v3/user/target/riscv64gc-unknown-none-elf/release/fs.img,if=none,format=raw,id=x0",
+									"-device",
+									"virtio-blk-device,drive=x0",
+									"-device",
+									"virtio-gpu-device",
+									"-device",
+									"virtio-keyboard-device",
+									"-device",
+									"virtio-mouse-device",
+									"-serial",
+									"stdio",
+									"-s",
+									"-S"
 								]
 							},
 							"userSpaceDebuggeeFiles": {
