--- a/package.json
+++ b/package.json
@@ -65,9 +65,21 @@
 					"command": "code-debug.disableCurrentSpaceBreakpoints",
 					"group": "navigation"
 				}
-			]
+			],
+			"editor/context": [
+				{
+					"command": "code-debug.registerSelectedSymbolInKernel",
+					"group": "9_cutcopypaste"
+				  },
+				{
+				  "command": "code-debug.registerSelectedSymbolInUserSpace",
+				  "group": "9_cutcopypaste"
+				}
+
+			  ]
 		},
 		"commands": [
+			
 			{
 				"command": "code-debug.eBPFPanel",
 				"title": "eBPF WebView",
@@ -134,6 +146,14 @@
 					"dark": "images/disable-current-space-breakpoints-dark.svg",
 					"light": "images/disable-current-space-breakpoints-light.svg"
 				}
+			},
+			{
+				"command": "code-debug.registerSelectedSymbolInUserSpace",
+				"title": "Register Selected Symbol in User Space"
+			},
+			{
+				"command": "code-debug.registerSelectedSymbolInKernel",
+				"title": "Register Selected Symbol in Kernel"
 			}
 		],
 		"breakpoints": [
